login.html terminado hasta el momento

--- a/pages/login.html
+++ b/pages/login.html
@@ -20,6 +20,11 @@
               class="login__input"
               placeholder="Introduce tu correo electrónico"
             />
+            <img
+              src="../assets/icons/mail.svg"
+              alt="icono del mensaje"
+              class="icon"
+            />
           </div>
           <div class="login__form-group">
             <input
@@ -28,6 +33,11 @@
               name="password"
               class="login__input"
               placeholder="Introduce tu contraseña"
+            />
+            <img
+              src="../assets/icons/lock.svg"
+              alt="icono del password"
+              class="icon"
             />
           </div>
 
