formulario signup.html aun falta terminar

--- a/pages/login.html
+++ b/pages/login.html
@@ -19,6 +19,7 @@
               name="email"
               class="login__input"
               placeholder="Introduce tu correo electrónico"
+              required
             />
             <img
               src="../assets/icons/mail.svg"
@@ -33,6 +34,7 @@
               name="password"
               class="login__input"
               placeholder="Introduce tu contraseña"
+              required
             />
             <img
               src="../assets/icons/lock.svg"
