terminar el menu principal

--- a/pages/index.html
+++ b/pages/index.html
@@ -19,17 +19,112 @@
           <section class="main__section">
             <article class="request">
               <div class="request__info">
-                <p class="request__area">Redes e Internet</p>
-                <p class="request__user">Lic. Noemi Paredes</p>
-                <p class="request__date">30 de Agosto de 2024 09:34</p>
+                <div class="request__info-details">
+                  <p class="request__text request__text-area">
+                    Redes e Internet
+                  </p>
+                  <p class="request__text">No hay conexión a internet</p>
+                  <p class="request__text">Lic. Noemi Paredes</p>
+                  <p class="request__text">30 de Agosto de 2024 09:34</p>
+                </div>
+                <div class="request__info-validation">
+                  <input type="checkbox" class="request__info-checkbox" />
+                  <div class="request__info-validations">
+                    <span class="request__info-validation-icon">V</span>
+                    <span class="request__info-validation-icon">V</span>
+                    <span class="request__info-validation-icon">V</span>
+                  </div>
+                </div>
               </div>
               <div class="request__actions">
                 <a href="#" class="request__action-link">
-                  <img src="#" alt="Eliminar" class="request__action-icon" />
+                  <img
+                    src="../assets/icons/eliminar.png"
+                    alt="Eliminar"
+                    class="request__action-icon"
+                  />
                 </a>
 
                 <a href="#" class="request__action-link">
-                  <img src="#" alt="Actualizar" class="request__action-icon" />
+                  <img
+                    src="../assets/icons/editar.png"
+                    alt="Actualizar"
+                    class="request__action-icon"
+                  />
+                </a>
+              </div>
+            </article>
+            <article class="request">
+              <div class="request__info">
+                <div class="request__info-details">
+                  <p class="request__text request__text-area">
+                    Redes e Internet
+                  </p>
+                  <p class="request__text">No hay conexión a internet</p>
+                  <p class="request__text">Lic. Noemi Paredes</p>
+                  <p class="request__text">30 de Agosto de 2024 09:34</p>
+                </div>
+                <div class="request__info-validation">
+                  <input type="checkbox" class="request__info-checkbox" />
+                  <div class="request__info-validations">
+                    <span class="request__info-validation-icon">V</span>
+                    <span class="request__info-validation-icon">V</span>
+                    <span class="request__info-validation-icon">V</span>
+                  </div>
+                </div>
+              </div>
+              <div class="request__actions">
+                <a href="#" class="request__action-link">
+                  <img
+                    src="../assets/icons/eliminar.png"
+                    alt="Eliminar"
+                    class="request__action-icon"
+                  />
+                </a>
+
+                <a href="#" class="request__action-link">
+                  <img
+                    src="../assets/icons/editar.png"
+                    alt="Actualizar"
+                    class="request__action-icon"
+                  />
+                </a>
+              </div>
+            </article>
+            <article class="request">
+              <div class="request__info">
+                <div class="request__info-details">
+                  <p class="request__text request__text-area">
+                    Redes e Internet
+                  </p>
+                  <p class="request__text">No hay conexión a internet</p>
+                  <p class="request__text">Lic. Noemi Paredes</p>
+                  <p class="request__text">30 de Agosto de 2024 09:34</p>
+                </div>
+                <div class="request__info-validation">
+                  <input type="checkbox" class="request__info-checkbox" />
+                  <div class="request__info-validations">
+                    <span class="request__info-validation-icon">V</span>
+                    <span class="request__info-validation-icon">V</span>
+                    <span class="request__info-validation-icon">V</span>
+                  </div>
+                </div>
+              </div>
+              <div class="request__actions">
+                <a href="#" class="request__action-link">
+                  <img
+                    src="../assets/icons/eliminar.png"
+                    alt="Eliminar"
+                    class="request__action-icon"
+                  />
+                </a>
+
+                <a href="#" class="request__action-link">
+                  <img
+                    src="../assets/icons/editar.png"
+                    alt="Actualizar"
+                    class="request__action-icon"
+                  />
                 </a>
               </div>
             </article>
